<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Jolly Roger</string>
    <string name="tab_text_1">Automatico</string>
    <string name="tab_text_2">Manuale</string>
    <string name="tab_text_3">Statistiche</string>
    <string name="action_settings">Settings</string>
    <string name="colore_pareti">Colore pareti</string>
    <string name="colore_pavimento">Colore pavimento</string>
    <string name="conferma">Conferma</string>
    <string name="connetti">Connetti</string>
    <string name="pinza">Pinza</string>
    <string name="braccio">Braccio</string>
    <string name="reset_impostazioni">Reset Impostazioni</string>
    <string name="messaggio">Benvenuti nell\'app di Jolly Roger! Scegliete il vostro robot pirata! ARRGHHH!!!</string>

    <string name ="ogg_rilevati">Totale oggetti rilevati:</string>
    <string name ="ogg_raccolti">Totale oggetti raccolti:</string>
    <string name ="ogg_non_raccolti">Totale oggetti non raccolti:</string>
    <string name ="col_rosso">Rossi:</string>
    <string name ="col_giallo">Gialli:</string>
    <string name ="col_verde">Verdi:</string>
    <string name ="col_blu">Blu:</string>
    <string name ="col_marrone">Marroni:</string>
    <string name ="col_nero">Neri:</string>
    <string name ="col_bianchi">Bianchi:</string>
    <string name="objects_colours" />

    <string name="icona_pirata" />
    <string name="scelta_robot">Scegliere robot pirata</string>
    <string name="auto_1">Scegliere gli oggetti da raccogliere</string>
    <string name="auto_2">Inserisci una quantità, premi ∞ per raccogliere tutti gli oggetti rilevati di quel tipo o lascia il campo vuoto per non raccoglierli.</string>


    <string-array name="robot_array">
        <item>Scegliere robot pirata</item>
        <item>Jolly Roger</item>
        <item>Ev3</item>
    </string-array>

    <string-array name="wall_colours">
        <item>Bianco</item>
        <item>Nero</item>
        <item>Rosso</item>
        <item>Blu</item>
        <item>Giallo</item>
        <item>Marrone</item>
        <item>Verde</item>
    </string-array>

    <string-array name="floor_colours">
        <item>Bianco</item>
        <item>Nero</item>
        <item>Rosso</item>
        <item>Blu</item>
        <item>Giallo</item>
        <item>Marrone</item>
        <item>Verde</item>
    </string-array>

    <string-array name="objects_colours">
        <item>Rossi:</item>
        <item>Gialli:</item>
        <item>Verdi:</item>
        <item>Blu:</item>
        <item>Marroni:</item>
        <item>Neri:</item>
    </string-array>


    <!--  Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


</resources>
